update hero headers,travel page

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
 
         <h2 data-aos="fade-up" data-aos-delay="100" class="hero-title-long">
-          THE ASIA PACIFIC<br>STROKE CONFERENCE 
+          THE ASIA PACIFIC<br>STROKE CONFERENCE
         </h2>
 
 
@@ -935,7 +935,7 @@
 
 
     <!-- Highlights Section -->
-    <section id="highlights" class="highlights section light-background">
+    <!-- <section id="highlights" class="highlights section light-background">
       <div class="container section-title" data-aos="fade-up">
         <h2>Highlights</h2>
         <p>Discover what makes APSC 2026 an unmissable event</p>
@@ -944,7 +944,7 @@
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <div class="row gy-4">
 
-          <!-- Why Attend -->
+         
           <div class="col-lg-4 col-md-6">
             <div class="highlight-card text-center p-4">
               <div class="icon mb-3">
@@ -960,7 +960,6 @@
             </div>
           </div>
 
-          <!-- International Participation -->
           <div class="col-lg-4 col-md-6">
             <div class="highlight-card text-center p-4">
               <div class="icon mb-3">
@@ -984,7 +983,6 @@
             </div>
           </div>
 
-          <!-- Scientific Program Overview -->
           <div class="col-lg-4 col-md-12">
             <div class="highlight-card text-center p-4">
               <div class="icon mb-3">
@@ -1002,7 +1000,7 @@
 
         </div>
       </div>
-    </section>
+    </section> -->
 
 
     <!-- Gallery Section -->
@@ -1211,97 +1209,112 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Contact</h2>
-        <p>Get in touch with the APSC 2026 Organizing Committee for inquiries and assistance.</p>
-      </div><!-- End Section Title -->
+        <h2>Contact & Location</h2>
+        <p>Find the venue location or reach the APSC 2026 Organizing Committee for inquiries and assistance.</p>
+      </div>
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
-        <div class="row gy-4">
+        <div class="row gy-4 align-items-stretch">
 
+          <!-- LEFT: Venue + Map -->
           <div class="col-lg-6">
-            <div class="info-item d-flex flex-column justify-content-center align-items-center" data-aos="fade-up"
-              data-aos-delay="200">
-              <i class="bi bi-geo-alt"></i>
-              <h3>Venue</h3>
-              <p>BMICH (Bandaranaike Memorial International Conference Hall)</p>
-            </div>
-          </div><!-- End Info Item -->
+            <div class="contact-panel h-100">
 
-          <!-- <div class="col-lg-3 col-md-6">
-            <div class="info-item d-flex flex-column justify-content-center align-items-center" data-aos="fade-up"
-              data-aos-delay="300">
-              <i class="bi bi-telephone"></i>
-              <h3>Call Us</h3>
-              <p>+94 11 123 4567</p>
-            </div>
-          </div> -->
-          <!-- End Info Item -->
+      
 
-          <div class="col-lg-6">
-            <div class="info-item d-flex flex-column justify-content-center align-items-center" data-aos="fade-up"
-              data-aos-delay="400">
-              <i class="bi bi-envelope"></i>
-              <h3>Email Us</h3>
-              <p>apsc2026.secretariat@gmail.com</p>
-            </div>
-          </div><!-- End Info Item -->
+              <div class="row gy-3">
 
-        </div>
-
-        <div class="row gy-4 mt-1">
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="300">
-            <iframe
-              src="https://www.google.com/maps?output=embed&q=Bandaranaike%20Memorial%20International%20Conference%20Hall%20(BMICH),%20Colombo,%20Sri%20Lanka&z=17"
-              width="100%" height="400" style="border:0;" allowfullscreen loading="lazy"
-              referrerpolicy="no-referrer-when-downgrade">
-            </iframe>
-
-            <!-- Optional: lets users open it in Google Maps -->
-            <a href="https://www.google.com/maps?q=Bandaranaike%20Memorial%20International%20Conference%20Hall%20(BMICH),%20Colombo,%20Sri%20Lanka"
-              target="_blank" rel="noopener" style="display:inline-block; margin-top:8px;">
-              View on Google Maps
-            </a>
-          </div>
-
-          <div class="col-lg-6">
-            <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up"
-              data-aos-delay="400">
-              <div class="row gy-4">
-
-                <div class="col-md-6">
-                  <input type="text" name="name" class="form-control" placeholder="Your Name" required="">
+                <div class="col-12">
+                  <div class="info-item d-flex flex-column justify-content-center align-items-center" data-aos="fade-up"
+                    data-aos-delay="200">
+                    <i class="bi bi-geo-alt"></i>
+                    <h3>Venue</h3>
+                    <p>BMICH (Bandaranaike Memorial International Conference Hall)</p>
+                  </div>
                 </div>
 
-                <div class="col-md-6 ">
-                  <input type="email" class="form-control" name="email" placeholder="Your Email" required="">
-                </div>
+                <div class="col-12" data-aos="fade-up" data-aos-delay="250">
+                  <div class="contact-map-wrap">
+                    <iframe
+                      src="https://www.google.com/maps?output=embed&q=Bandaranaike%20Memorial%20International%20Conference%20Hall%20(BMICH),%20Colombo,%20Sri%20Lanka&z=17"
+                      width="100%" height="400" style="border:0;" allowfullscreen loading="lazy"
+                      referrerpolicy="no-referrer-when-downgrade">
+                    </iframe>
 
-                <div class="col-md-12">
-                  <input type="text" class="form-control" name="subject" placeholder="Subject" required="">
-                </div>
-
-                <div class="col-md-12">
-                  <textarea class="form-control" name="message" rows="6" placeholder="Message" required=""></textarea>
-                </div>
-
-                <div class="col-md-12 text-center">
-                  <div class="loading">Loading</div>
-                  <div class="error-message"></div>
-                  <div class="sent-message">Your message has been sent. Thank you!</div>
-
-                  <button type="submit">Send Message</button>
+                    <a class="contact-map-link"
+                      href="https://www.google.com/maps?q=Bandaranaike%20Memorial%20International%20Conference%20Hall%20(BMICH),%20Colombo,%20Sri%20Lanka"
+                      target="_blank" rel="noopener">
+                      <i class="bi bi-box-arrow-up-right"></i> View on Google Maps
+                    </a>
+                  </div>
                 </div>
 
               </div>
-            </form>
-          </div><!-- End Contact Form -->
+            </div>
+          </div>
+
+          <!-- RIGHT: Email + Form -->
+          <div class="col-lg-6">
+            <div class="contact-panel h-100">
+
+
+              <div class="row gy-3">
+
+                <div class="col-12">
+                  <div class="info-item d-flex flex-column justify-content-center align-items-center" data-aos="fade-up"
+                    data-aos-delay="200">
+                    <i class="bi bi-envelope"></i>
+                    <h3>Email</h3>
+                    <p><a class="contact-email"
+                        href="mailto:apsc2026.secretariat@gmail.com">apsc2026.secretariat@gmail.com</a></p>
+                  </div>
+                </div>
+
+                <div class="col-12">
+                  <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up"
+                    data-aos-delay="250">
+                    <div class="row gy-4">
+
+                      <div class="col-md-6">
+                        <input type="text" name="name" class="form-control" placeholder="Your Name" required="">
+                      </div>
+
+                      <div class="col-md-6">
+                        <input type="email" class="form-control" name="email" placeholder="Your Email" required="">
+                      </div>
+
+                      <div class="col-md-12">
+                        <input type="text" class="form-control" name="subject" placeholder="Subject" required="">
+                      </div>
+
+                      <div class="col-md-12">
+                        <textarea class="form-control" name="message" rows="6" placeholder="Message"
+                          required=""></textarea>
+                      </div>
+
+                      <div class="col-md-12 text-center">
+                        <div class="loading">Loading</div>
+                        <div class="error-message"></div>
+                        <div class="sent-message">Your message has been sent. Thank you!</div>
+
+                        <button type="submit">Send Message</button>
+                      </div>
+
+                    </div>
+                  </form>
+                </div>
+
+              </div>
+
+            </div>
+          </div>
 
         </div>
-
       </div>
 
     </section><!-- /Contact Section -->
+
 
   </main>
 
