--- a/travel.html
+++ b/travel.html
@@ -45,22 +45,22 @@
         <div class="container-fluid container-xl position-relative d-flex align-items-center">
 
             <a href="" class="logo d-flex align-items-center me-auto">
-        <img src="assets/img/APSO Logo.png" alt="">
-        <!-- <img src="assets/img/ASN Logo.png" alt=""> -->
-        <img src="assets/img/NSASL Logo.png" alt="">
-        <!-- Uncomment the line below if you also wish to use an text logo -->
-        <!-- <h1 class="sitename">TheEvent</h1>  -->
-      </a>
+                <img src="assets/img/APSO Logo.png" alt="">
+                <!-- <img src="assets/img/ASN Logo.png" alt=""> -->
+                <img src="assets/img/NSASL Logo.png" alt="">
+                <!-- Uncomment the line below if you also wish to use an text logo -->
+                <!-- <h1 class="sitename">TheEvent</h1>  -->
+            </a>
 
-      <a href="" class="logo d-flex align-items-center me-auto">
-        <img src="assets/img/ASN Logo.png" alt="">
-        <img src="assets/img/AON.jpeg" alt="">
-        <img src="assets/img/SLCEP Logo.png" alt="">
-        <img src="assets/img/CCP Logo.jpeg" alt="">
-        <img src="assets/img/SSOS Logo.png" alt="">
-        <!-- Uncomment the line below if you also wish to use an text logo -->
-        <!-- <h1 class="sitename">TheEvent</h1>  -->
-      </a>
+            <a href="" class="logo d-flex align-items-center me-auto">
+                <img src="assets/img/ASN Logo.png" alt="">
+                <img src="assets/img/AON.jpeg" alt="">
+                <img src="assets/img/SLCEP Logo.png" alt="">
+                <img src="assets/img/CCP Logo.jpeg" alt="">
+                <img src="assets/img/SSOS Logo.png" alt="">
+                <!-- Uncomment the line below if you also wish to use an text logo -->
+                <!-- <h1 class="sitename">TheEvent</h1>  -->
+            </a>
 
             <nav id="navmenu" class="navmenu">
                 <ul>
@@ -111,16 +111,14 @@
                 <div class="travel-card p-4 p-md-5 shadow-sm rounded-3">
 
                     <!-- VISA -->
-                    <h3><i class="bi bi-passport me-2 text-primary"></i>Visa Information</h3>
+                    <h3></i>Visa Information</h3>
                     <p>
-                        All international delegates attending APSC 2026 are required to obtain a valid
-                        visa or
-                        Electronic Travel Authorization (ETA) before entering Sri Lanka. The process is
-                        straightforward
+                        All international delegates attending APSC 2026 are required to obtain a valid visa or
+                        Electronic Travel Authorization (ETA) before entering Sri Lanka. The process is straightforward
                         and can be completed entirely online through the official government portal.
-                        We strongly recommend applying for the ETA well in advance to ensure smooth entry upon arrival.
-                        Most travellers receive approval within a few days.
                     </p>
+                    <p>We strongly recommend applying for the ETA well in advance to ensure smooth entry upon arrival.
+                        Most travellers receive approval within a few days.</p>
                     <p>
                         For full details and to apply online, please visit the official Sri Lanka ETA website:
                         <a href="https://www.eta.gov.lk" target="_blank"><strong>www.eta.gov.lk</strong></a>
@@ -128,17 +126,31 @@
 
                     <hr>
 
+                    <!-- Invitation -->
+                    <h3></i>Invitation Letter Request</h3>
+                    <p>
+                        Please note that invitation letters are issued only for registered participants and speakers.
+                        Delegates and speakers who require an official invitation letter for visa application purposes
+                        may request one through the form below. (insert link here)
+                    </p>
+                    <p>Invitation letters are issued solely to support visa applications. Please note that the
+                        invitation letter does not imply financial support or responsibility for travel, accommodation,
+                        or other expenses.</p>
+                    <p>
+                        Kindly ensure that all information provided in the form is accurate. Requests with incomplete
+                        information may be delayed.
+                    </p>
+
+                    <hr>
+
                     <!-- TRANSPORT -->
-                    <h3><i class="bi bi-taxi-front me-2 text-primary"></i>Transport from Airport to Colombo</h3>
-                    <p>Bandaranaike International Airport (BIA) is approximately 30 km from Colombo,
-                        with a travel time
-                        of around 45–60 minutes depending on traffic. Transport options for delegates include
-                        Airport
-                            Taxi Counters (Official taxi services available at the arrivals terminal). Many
-                        hotels offer
+                    <h3>Transport from Airport to Colombo</h3>
+                    <p>Bandaranaike International Airport (BIA) is approximately 30 km from Colombo, with a travel time
+                        of around 45–60 minutes depending on traffic. Transport options for delegates include Airport
+                        Taxi Counters (Official taxi services available at the arrivals terminal). Many hotels offer
                         airport pickups upon request.
-                        We recommend pre-booking transfers or using official airport counters for
-                        convenience and safety
+                    </p>
+                    <p>We recommend pre-booking transfers or using official airport counters for convenience and safety.
                     </p>
 
                     <!-- <ul>
@@ -169,16 +181,14 @@
                     <hr> -->
 
                     <!-- AIR TRAVEL -->
-                    <h3><i class="bi bi-airplane me-2 text-primary"></i>Air Travel to Sri Lanka</h3>
+                    <h3>Air Travel to Sri Lanka</h3>
                     <p>
-                        Bandaranaike International Airport (BIA), located about 30 km north of Colombo,
-                        is Sri Lanka’s
+                        Bandaranaike International Airport (BIA), located about 30 km north of Colombo, is Sri Lanka’s
                         main international gateway. The airport is well connected to major cities across Asia, the
                         Middle East, Europe, and Australia.
-                        Leading airlines flying to Colombo include Sri Lankan Airlines, Qatar Airways, Emirates,
-                            Singapore Airlines, Etihad Airways, Thai Airways, and Air India,
-                        among others.
                     </p>
+                    <p>Leading airlines flying to Colombo include Sri Lankan Airlines, Qatar Airways, Emirates,
+                        Singapore Airlines, Etihad Airways, Thai Airways, and Air India, among others.</p>
 
                     <p>Delegates are advised to:</p>
 
@@ -193,7 +203,7 @@
                     <hr>
 
                     <!-- EXPLORE -->
-                    <h3><i class="bi bi-geo-alt me-2 text-primary"></i>Explore Sri Lanka</h3>
+                    <h3>Explore Sri Lanka</h3>
                     <p>Sri Lanka, the <i>“Pearl of the Indian Ocean”</i> offers a wealth of cultural, historical, and
                         natural
                         attractions. From Colombo, delegates can explore destinations across the island, making their
@@ -225,7 +235,7 @@
                     <hr>
 
                     <!-- HEALTH -->
-                    <h3><i class="bi bi-shield-check me-2 text-primary"></i>Health & Safety</h3>
+                    <h3></i>Health & Safety</h3>
                     <p>
                         The health and safety of all delegates is a top priority. Sri Lanka is generally a safe
                         destination, but visitors are encouraged to take standard precautions.
