add committees, venue and faq pages

--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
       <nav id="navmenu" class="navmenu">
         <ul>
           <li><a href="#hero" class="active">Home<br></a></li>
-          <li><a href="./registration-guidelines.html" class="active">Registration<br></a></li>
-          <li><a href="./abstract-guidelines.html" class="active">Abstract<br></a></li>
+          <li><a href="./registration-guidelines.html">Registration<br></a></li>
+          <li><a href="./abstract-guidelines.html">Abstract<br></a></li>
           <li><a href="#program" class="active">Scientific Program<br></a></li>
           <li class="dropdown">
             <a href="#"><span>General Information</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
@@ -78,6 +78,9 @@
 
               <li><a href="travel.html">Travel Information</a></li>
               <li><a href="privacy-policy.html">Privacy & Data Protection Policy</a></li>
+              <li><a href="committees.html">Committees</a></li>
+              <li><a href="venue.html">Venue</a></li>
+              <li><a href="faq.html">FAQ</a></li>
 
               <!-- <li class="dropdown">
                 <a href="#"><span>Registration</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
@@ -133,7 +136,7 @@
         <h2 data-aos="fade-up" data-aos-delay="100" class="hero-title-long">
           THE ASIA PACIFIC<br>STROKE CONFERENCE
         </h2>
-
+        <br>
 
         <p data-aos="fade-up" data-aos-delay="200" class="hero-venue-name">Venue: BMICH</p>
         <p data-aos="fade-up" data-aos-delay="200" class="hero-venue-name">
@@ -1221,7 +1224,7 @@
           <div class="col-lg-6">
             <div class="contact-panel h-100">
 
-      
+
 
               <div class="row gy-3">
 
