--- a/registration-guidelines.html
+++ b/registration-guidelines.html
@@ -58,6 +58,9 @@
                         <ul>
                             <li><a href="travel.html">Travel Information</a></li>
                             <li><a href="privacy-policy.html">Privacy & Data Protection Policy</a></li>
+                            <li><a href="committees.html">Committees</a></li>
+                            <li><a href="venue.html" >Venue</a></li>
+                            <li><a href="faq.html" >FAQ</a></li>
 
                         </ul>
                     </li>
