--- a/travel.html
+++ b/travel.html
@@ -75,7 +75,9 @@
                         <ul>
                             <li><a href="travel.html">Travel Information</a></li>
                             <li><a href="privacy-policy.html">Privacy & Data Protection Policy</a></li>
-
+                            <li><a href="committees.html">Committees</a></li>
+                            <li><a href="venue.html" >Venue</a></li>
+                            <li><a href="faq.html" >FAQ</a></li>
                         </ul>
                     </li>
                     <li><a href="index.html#contact">Contact</a></li>
@@ -127,7 +129,7 @@
                     <hr>
 
                     <!-- Invitation -->
-                    <h3></i>Invitation Letter Request</h3>
+                    <h3>Invitation Letter Request</h3>
                     <p>
                         Please note that invitation letters are issued only for registered participants and speakers.
                         Delegates and speakers who require an official invitation letter for visa application purposes
